--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "bootstrap": "^5.2.3",
     "sass": "^1.62.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.8.4",
+    "http": "^0.0.1-security"
+  }
 }
