--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.8.4",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "nodemailer": "^6.10.1"
   }
 }
