--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "http": "^0.0.1-security",
+    "mongodb": "^6.16.0",
     "nodemailer": "^6.10.1"
   }
 }
